--- a/ASMC/App.config
+++ b/ASMC/App.config
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+  </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
     </startup>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
+        autoReload="false"
+        throwExceptions="false"
+        internalLogLevel="Off"
+        internalLogFile="c:\temp\nlog-internal.log">
+    <targets>
+      <target xsi:type="File" name="logFile" fileName="${specialfolder:folder=ApplicationData}\ASMC\logs\asmc.log" layout="[${longdate}] ${processname} ${processid} ${level} ${logger} ${message}" />
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Debug" writeTo="logFile" />
+    </rules>
+  </nlog>
 </configuration>
