--- a/Plugins/B5-71-1-PRO/B5-71-1-PRO.csproj
+++ b/Plugins/B5-71-1-PRO/B5-71-1-PRO.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="B5_71_1_PRO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
