--- a/ASMC/ASMC.csproj
+++ b/ASMC/ASMC.csproj
@@ -99,11 +99,12 @@
     </Compile>
     <Compile Include="Properties\AssemblySettings.cs" />
     <Compile Include="UI\ShemService.cs" />
+    <Compile Include="ViewModel\ShemViewModel.cs" />
     <Compile Include="ViewModel\WizardViewModel.cs" />
     <Compile Include="ViewSettingsSelector.cs" />
     <Compile Include="View\Converters\VersionToStringConverter.cs" />
-    <Compile Include="View\ShemServiceView.xaml.cs">
-      <DependentUpon>ShemServiceView.xaml</DependentUpon>
+    <Compile Include="View\ShemView.xaml.cs">
+      <DependentUpon>ShemView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\WizardView.xaml.cs">
       <DependentUpon>WizardView.xaml</DependentUpon>
@@ -158,7 +159,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\ShemServiceView.xaml">
+    <Page Include="View\ShemView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
