--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -63,7 +63,6 @@
     <Compile Include="IEEE\Fluke\Calibrator\Calib_5522A.cs" />
     <Compile Include="IEEE\Fluke\Calibrator\Calib_5720A.cs" />
     <Compile Include="IEEE\Fluke\CalibtatorOscilloscope\Calibr_9500B.cs" />
-    <Compile Include="IEEE\Fluke\Multimeter\Mult8508A.cs" />
     <Compile Include="IEEE\IEEE_Base.cs" />
     <Compile Include="IEEE\Keysight\ElectronicLoad\Main_N3300.cs" />
     <Compile Include="IEEE\Keysight\ElectronicLoad\N3303A.cs" />
@@ -96,7 +95,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="IEEE\Fluke\Multimeter\" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AP.Math\AP.Math.csproj">
       <Project>{3b414e92-0ccd-4321-95c6-fe0c71bda0e6}</Project>
