--- a/Plugins/APPA/APPA-107N-109N/APPA-107N-109N.csproj
+++ b/Plugins/APPA/APPA-107N-109N/APPA-107N-109N.csproj
@@ -45,6 +45,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\AP.Math\AP.Math.csproj">
+      <Project>{3b414e92-0ccd-4321-95c6-fe0c71bda0e6}</Project>
+      <Name>AP.Math</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\ASMC.Data.Model\ASMC.Data.Model.csproj">
+      <Project>{f76e5dbb-5041-44c1-9194-6e92af51b314}</Project>
+      <Name>ASMC.Data.Model</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\ASMC.Devices\ASMC.Devices.csproj">
       <Project>{C606FA94-0B7E-4698-801F-206CA9DA0CEF}</Project>
       <Name>ASMC.Devices</Name>
