--- a/ASMC.Data.Model/ASMC.Data.Model.csproj
+++ b/ASMC.Data.Model/ASMC.Data.Model.csproj
@@ -57,7 +57,7 @@
   <ItemGroup>
     <Compile Include="BasicOperation.cs" />
     <Compile Include="Interface\IBasicOperation.cs" />
-    <Compile Include="Interface\IProrgam.cs" />
+    <Compile Include="Interface\IProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TreeNode.cs" />
     <Compile Include="UserItemOperation.cs" />
