Изменен интерфес IUserItemOperation изправлена работа выбора вида МК

--- a/ASMC.Core/ASMC.Core.csproj
+++ b/ASMC.Core/ASMC.Core.csproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <Compile Include="Behavior\BindableSelectedItemBeheavior.cs" />
     <Compile Include="Behavior\IsFocesedUI.cs" />
+    <Compile Include="EnumFlagToBoolConverter.cs" />
     <Compile Include="Exceptions.cs" />
     <Compile Include="IFormService.cs" />
     <Compile Include="ISupportClose.cs" />
