--- a/ASMC.Core/ASMC.Core.csproj
+++ b/ASMC.Core/ASMC.Core.csproj
@@ -99,6 +99,8 @@
     <Compile Include="Settings\IWindowSettings.cs" />
     <Compile Include="Settings\SettingsSelector.cs" />
     <Compile Include="Settings\WindowSettingsBase.cs" />
+    <Compile Include="UI\MessageBoxService.cs" />
+    <Compile Include="UI\TaskMessageService.cs" />
     <Compile Include="UI\FormServiceBase.cs" />
     <Compile Include="UI\WindowAttachedProperties.cs" />
     <Compile Include="UI\WindowService.cs" />
@@ -187,10 +189,6 @@
     <ProjectReference Include="..\AP.Utils\AP.Utils.csproj">
       <Project>{FF877F85-43B8-4779-A822-A2904ADC1100}</Project>
       <Name>AP.Utils</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ASMC.Data.Model\ASMC.Data.Model.csproj">
-      <Project>{F76E5DBB-5041-44C1-9194-6E92AF51B314}</Project>
-      <Name>ASMC.Data.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
