--- a/Plugins/APPA/APPA-107N-109N/APPA-107N-109N.csproj
+++ b/Plugins/APPA/APPA-107N-109N/APPA-107N-109N.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.Mvvm.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,6 +49,10 @@
     <ProjectReference Include="..\..\..\AP.Math\AP.Math.csproj">
       <Project>{3b414e92-0ccd-4321-95c6-fe0c71bda0e6}</Project>
       <Name>AP.Math</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\AP.Utils\AP.Utils.csproj">
+      <Project>{FF877F85-43B8-4779-A822-A2904ADC1100}</Project>
+      <Name>AP.Utils</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\ASMC.Data.Model\ASMC.Data.Model.csproj">
       <Project>{f76e5dbb-5041-44c1-9194-6e92af51b314}</Project>
