--- a/Plugins/B5-71-PRO_Abstract/B5-71-PRO_Abstract.csproj
+++ b/Plugins/B5-71-PRO_Abstract/B5-71-PRO_Abstract.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FD6E637E-83A1-4B18-B19F-992185034AAB}</ProjectGuid>
+    <ProjectGuid>{9E15A5E6-F812-4E56-BF83-2B5C0D247F96}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>B5_71_PRO</RootNamespace>
-    <AssemblyName>B5-71-1-PRO</AssemblyName>
+    <RootNamespace>B5_71_PRO_Abstract</RootNamespace>
+    <AssemblyName>B5-71-PRO_Abstract</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,13 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevExpress.Mvvm.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\DevExpress.v17.2\DevExpress.Mvvm.v17.2.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,30 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="B5_71_1_PRO.cs" />
+    <Compile Include="AbstractB5_71_PRO_Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\AP.Math\AP.Math.csproj">
-      <Project>{3b414e92-0ccd-4321-95c6-fe0c71bda0e6}</Project>
-      <Name>AP.Math</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ASMC.Core\ASMC.Core.csproj">
-      <Project>{ADB547EB-33AA-4C07-A493-C80729632A8B}</Project>
-      <Name>ASMC.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ASMC.Data.Model\ASMC.Data.Model.csproj">
-      <Project>{F76E5DBB-5041-44C1-9194-6E92AF51B314}</Project>
-      <Name>ASMC.Data.Model</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ASMC.Devices\ASMC.Devices.csproj">
-      <Project>{c606fa94-0b7e-4698-801f-206ca9da0cef}</Project>
-      <Name>ASMC.Devices</Name>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
