--- a/ASMC.Core/ASMC.Core.csproj
+++ b/ASMC.Core/ASMC.Core.csproj
@@ -111,8 +111,8 @@
     <Compile Include="ViewModel\DialogBaseContent.cs" />
     <Compile Include="ViewModel\FromBaseViewModel.cs" />
     <Compile Include="ViewModel\ReadAndWriteTextVM.cs" />
-    <Compile Include="View\DataView.xaml.cs">
-      <DependentUpon>DataView.xaml</DependentUpon>
+    <Compile Include="View\FormView.xaml.cs">
+      <DependentUpon>FormView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\InputTableView.xaml.cs">
       <DependentUpon>InputTableView.xaml</DependentUpon>
@@ -153,7 +153,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\DataView.xaml">
+    <Page Include="View\FormView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
