--- a/ASMC.Common/ASMC.Common.csproj
+++ b/ASMC.Common/ASMC.Common.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F76E5DBB-5041-44C1-9194-6E92AF51B314}</ProjectGuid>
+    <ProjectGuid>{7FE244D8-06C9-4B0E-B2E5-7E92AC14E48D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ASMC.Data.Model</RootNamespace>
-    <AssemblyName>ASMC.Data.Model</AssemblyName>
+    <RootNamespace>ASMC.Common</RootNamespace>
+    <AssemblyName>ASMC.Common</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,54 +34,59 @@
     <Reference Include="DevExpress.Mvvm.v17.2">
       <HintPath>..\packages\DevExpress.v17.2\DevExpress.Mvvm.v17.2.dll</HintPath>
     </Reference>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\ASU MS 7\Старые библиотеки, не удалять\NLog.4.6.7\lib\net45\NLog.dll</HintPath>
+    <Reference Include="DevExpress.Xpf.Core.v17.2">
+      <HintPath>..\packages\DevExpress.v17.2\DevExpress.Xpf.Core.v17.2.dll</HintPath>
     </Reference>
-    <Reference Include="Palsys.Data.Model">
-      <HintPath>..\..\..\ASU MS 7\Старые библиотеки, не удалять\Palsys.Data.Model.dll</HintPath>
+    <Reference Include="Microsoft.WindowsAPICodePack">
+      <HintPath>..\packages\WindowsAPICodePack-Core.1.1.2\lib\Microsoft.WindowsAPICodePack.dll</HintPath>
     </Reference>
-    <Reference Include="Palsys.Report, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\ASU MS 7\Старые библиотеки, не удалять\Palsys.Report.dll</HintPath>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.4.7.1\lib\net45\NLog.dll</HintPath>
     </Reference>
-    <Reference Include="Palsys.Utils, Version=7.0.1900.1199, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\ASU MS 7\Старые библиотеки, не удалять\Palsys.Utils.dll</HintPath>
-    </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="Xceed.Wpf.Toolkit">
+      <HintPath>..\..\..\..\ASU MS 7\Старые библиотеки, не удалять\Extended.Wpf.Toolkit.3.5.0\lib\net40\Xceed.Wpf.Toolkit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbstractProgram.cs" />
-    <Compile Include="BasicOperation.cs" />
-    <Compile Include="Interface\IBasicOperation.cs" />
-    <Compile Include="Interface\IProgram.cs" />
+    <Compile Include="Behavior\BindableSelectedItemBeheavior.cs" />
+    <Compile Include="Behavior\IsFocesedUI.cs" />
+    <Compile Include="EnumFlagToBoolConverter.cs" />
+    <Compile Include="Exceptions.cs" />
+    <Compile Include="IFormService.cs" />
+    <Compile Include="ISupportClose.cs" />
+    <Compile Include="ISupportDialog.cs" />
+    <Compile Include="ISupportSettings.cs" />
+    <Compile Include="ITaskMessageService.cs" />
+    <Compile Include="Keys.cs" />
+    <Compile Include="NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TreeNode.cs" />
-    <Compile Include="UserItemOperation.cs" />
+    <Compile Include="Settings\IWindowSettings.cs" />
+    <Compile Include="Settings\SettingsSelector.cs" />
+    <Compile Include="Settings\WindowSettingsBase.cs" />
+    <Compile Include="UI\FormServiceBase.cs" />
+    <Compile Include="UI\MessageBoxService.cs" />
+    <Compile Include="UI\TaskMessageService.cs" />
+    <Compile Include="UI\WindowAttachedProperties.cs" />
+    <Compile Include="UI\WindowService.cs" />
+    <Compile Include="ViewExtensions.cs" />
+    <Compile Include="ViewModel\BaseViewModel.cs" />
+    <Compile Include="ViewModel\ClosableViewModel.cs" />
+    <Compile Include="ViewModel\FromBaseViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AP.Utils\AP.Utils.csproj">
-      <Project>{FF877F85-43B8-4779-A822-A2904ADC1100}</Project>
-      <Name>AP.Utils</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ASMC.Common\ASMC.Common.csproj">
-      <Project>{7FE244D8-06C9-4B0E-B2E5-7E92AC14E48D}</Project>
-      <Name>ASMC.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ASMC.Devices\ASMC.Devices.csproj">
-      <Project>{c606fa94-0b7e-4698-801f-206ca9da0cef}</Project>
-      <Name>ASMC.Devices</Name>
-    </ProjectReference>
+    <Folder Include="View\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
