--- a/ASMC.Core/ASMC.Core.csproj
+++ b/ASMC.Core/ASMC.Core.csproj
@@ -81,38 +81,23 @@
     <Reference Include="UIAutomationProvider" />
     <Reference Include="UIAutomationTypes" />
     <Reference Include="WindowsBase" />
+    <Reference Include="Xceed.Wpf.Toolkit">
+      <HintPath>..\..\..\..\ASU MS 7\Старые библиотеки, не удалять\Extended.Wpf.Toolkit.3.5.0\lib\net40\Xceed.Wpf.Toolkit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Behavior\BindableSelectedItemBeheavior.cs" />
-    <Compile Include="Behavior\IsFocesedUI.cs" />
-    <Compile Include="EnumFlagToBoolConverter.cs" />
-    <Compile Include="Exceptions.cs" />
-    <Compile Include="IFormService.cs" />
-    <Compile Include="ISupportClose.cs" />
-    <Compile Include="ISupportDialog.cs" />
-    <Compile Include="ISupportSettings.cs" />
-    <Compile Include="ITaskMessageService.cs" />
-    <Compile Include="Keys.cs" />
-    <Compile Include="NativeMethods.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings\IWindowSettings.cs" />
-    <Compile Include="Settings\SettingsSelector.cs" />
-    <Compile Include="Settings\WindowSettingsBase.cs" />
-    <Compile Include="UI\MessageBoxService.cs" />
-    <Compile Include="UI\TaskMessageService.cs" />
+    <Compile Include="UI\ImageService.cs" />
     <Compile Include="UI\FormServiceBase.cs" />
-    <Compile Include="UI\WindowAttachedProperties.cs" />
-    <Compile Include="UI\WindowService.cs" />
     <Compile Include="ValidationRules\Rules.cs" />
-    <Compile Include="ViewExtensions.cs" />
-    <Compile Include="ViewModel\BaseViewModel.cs" />
-    <Compile Include="ViewModel\ClosableViewModel.cs" />
-    <Compile Include="ViewModel\DialogBaseContent.cs" />
-    <Compile Include="ViewModel\FromBaseViewModel.cs" />
     <Compile Include="ViewModel\ReadAndWriteTextVM.cs" />
+    <Compile Include="ViewModel\ShemViewModel.cs" />
     <Compile Include="View\FormView.xaml.cs">
       <DependentUpon>FormView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\ImageView.xaml.cs">
+      <DependentUpon>ImageView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\InputTableView.xaml.cs">
       <DependentUpon>InputTableView.xaml</DependentUpon>
@@ -157,6 +142,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\ImageView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="View\InputTableView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -189,6 +178,14 @@
     <ProjectReference Include="..\AP.Utils\AP.Utils.csproj">
       <Project>{FF877F85-43B8-4779-A822-A2904ADC1100}</Project>
       <Name>AP.Utils</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ASMC.Common\ASMC.Common.csproj">
+      <Project>{7FE244D8-06C9-4B0E-B2E5-7E92AC14E48D}</Project>
+      <Name>ASMC.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ASMC.Data.Model\ASMC.Data.Model.csproj">
+      <Project>{F76E5DBB-5041-44C1-9194-6E92AF51B314}</Project>
+      <Name>ASMC.Data.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
