--- a/ASMC.Core/ASMC.Core.csproj
+++ b/ASMC.Core/ASMC.Core.csproj
@@ -88,10 +88,11 @@
   <ItemGroup>
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\QuestionTextService.cs" />
     <Compile Include="UI\ImageService.cs" />
     <Compile Include="UI\FormServiceBase.cs" />
     <Compile Include="ValidationRules\Rules.cs" />
-    <Compile Include="ViewModel\ReadAndWriteTextVM.cs" />
+    <Compile Include="ViewModel\QuestionTextViewModel.cs" />
     <Compile Include="ViewModel\ShemViewModel.cs" />
     <Compile Include="View\FormView.xaml.cs">
       <DependentUpon>FormView.xaml</DependentUpon>
@@ -102,36 +103,12 @@
     <Compile Include="View\InputTableView.xaml.cs">
       <DependentUpon>InputTableView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\ReadAndWriteText.xaml.cs">
-      <DependentUpon>ReadAndWriteText.xaml</DependentUpon>
+    <Compile Include="View\QuestionTextView.xaml.cs">
+      <DependentUpon>QuestionTextView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\WorkView.xaml.cs">
       <DependentUpon>WorkView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\WriteText.xaml.cs">
-      <DependentUpon>WriteText.xaml</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Image\CharacterGrowFont.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Image\CharacterShrinkFont.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Image\EditCopy.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Image\EditCut.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Image\EditPaste.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Image\ListBullets.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Image\ListNumbering.png" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Themes\Generic.xaml">
@@ -150,17 +127,13 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\ReadAndWriteText.xaml">
+    <Page Include="View\QuestionTextView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Page Include="View\WorkView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\WriteText.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup />
