--- a/Plugins/B5-71-4-PRO/B5-71-4-PRO.csproj
+++ b/Plugins/B5-71-4-PRO/B5-71-4-PRO.csproj
@@ -76,8 +76,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>mkdir "D:\Work\C#\Git rep\ASMC\ASMC\ASMC\bin\Debug\Plugins" 2&gt; NUL
-xcopy "$(TargetPath)" "$(SolutionDir)ASMC\bin\Debug\Plugins\$(TargetName)" /Y
-mkdir "D:\Work\C#\Git rep\ASMC\ASMC\ASMC\bin\Debug\Plugins\B5-71-4-PRO\Resources" 2&gt; NUL</PostBuildEvent>
+    <PostBuildEvent>mkdir "D:\Work\C#\Git rep\ASMC\ASMC\ASMC\bin\$(ConfigurationName)\Plugins\" 2&gt; NUL
+xcopy "$(TargetPath)" "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\" /Y
+mkdir "D:\Work\C#\Git rep\ASMC\ASMC\ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\Resources\" 2&gt; NUL</PostBuildEvent>
   </PropertyGroup>
 </Project>
