--- a/AP.Reports/AP.Reports.csproj
+++ b/AP.Reports/AP.Reports.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AP.Reports</RootNamespace>
     <AssemblyName>AP.Reports</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
@@ -110,7 +110,6 @@
     <Compile Include="Interface\IReport.cs" />
     <Compile Include="MSInterop\ExcelInterop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\EnumAttribute.cs" />
     <Compile Include="Utils\Exceptions.cs" />
     <Compile Include="Utils\FromFormatToStringConverter.cs" />
     <Compile Include="Utils\UtilsExcel.cs" />
@@ -127,6 +126,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="License-LGPL.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AP.Utils\AP.Utils.csproj">
+      <Project>{ff877f85-43b8-4779-a822-a2904adc1100}</Project>
+      <Name>AP.Utils</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
