--- a/Plugins/B5-71-PRO_Abstract/B5-71-PRO_Abstract.csproj
+++ b/Plugins/B5-71-PRO_Abstract/B5-71-PRO_Abstract.csproj
@@ -73,5 +73,8 @@
       <Name>ASMC.Devices</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
