--- a/Plugins/B5-71-2-PRO/B5-71-2-PRO.csproj
+++ b/Plugins/B5-71-2-PRO/B5-71-2-PRO.csproj
@@ -71,6 +71,9 @@
       <Name>B5-71-PRO_Abstract</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\" 2&gt; NUL
