--- a/AP.Math.Processing/packages.config
+++ b/AP.Math.Processing/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MathNet.Filtering" version="0.6.0" targetFramework="net45" requireReinstallation="true" />
-  <package id="MathNet.Numerics" version="4.6.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="MathNet.Numerics" version="4.12.0" targetFramework="net462" />
 </packages>
