--- a/Plugins/B5-71-1-PRO/B5-71-1-PRO.csproj
+++ b/Plugins/B5-71-1-PRO/B5-71-1-PRO.csproj
@@ -73,6 +73,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
