--- a/ASMC.Core/packages.config
+++ b/ASMC.Core/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net45" requireReinstallation="true" />
   <package id="Fluent.Ribbon" version="6.1.0.326" targetFramework="net45" requireReinstallation="true" />
-  <package id="NLog" version="4.6.5" targetFramework="net451" />
+  <package id="NLog" version="4.7.3" targetFramework="net462" />
   <package id="NLog.Config" version="4.6.5" targetFramework="net451" />
-  <package id="NLog.Schema" version="4.6.5" targetFramework="net451" />
+  <package id="NLog.Schema" version="4.7.3" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
