--- a/ASMC.Devices/packages.config
+++ b/ASMC.Devices/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Kelary.Ivi.Visa" version="5.8.908" targetFramework="net45" />
+  <package id="MathNet.Numerics" version="4.12.0" targetFramework="net462" />
 </packages>
