--- a/ASMC.Devices/packages.config
+++ b/ASMC.Devices/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Kelary.Ivi.Visa" version="5.8.908" targetFramework="net45" />
   <package id="MathNet.Numerics" version="4.12.0" targetFramework="net462" />
+  <package id="NLog" version="4.7.3" targetFramework="net462" />
 </packages>
